# Life-During-Wartime

./: .gitignore  00_base-code.cc  01_instance.cc  02_validation-layers.cc  03_physical-devices-and-queue-families.cc  04_logical-device-and-queue.cc  05_window-surface.cc  06_swapchain.cc  07_image-views.cc  08_shader-modules.cc  CMakeLists.txt
CMake/: FindKTX.cmake
drawing-triangle/: CMakeLists.txt  main.cpp
